--- a/src/main/resources/templates/uss/login.html
+++ b/src/main/resources/templates/uss/login.html
@@ -100,45 +100,25 @@
      <section id="coming-soon">        
          <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">                    
-                    <div class="text-center coming-content">
-                        <h1>UNDER CONSTRUCTION</h1>
-                        <p>We have been spending long hours in order to launch our new website. 
-                            We will offer freebies, a brand new blog and featured content of our latest work. Join our mailing list or follow us on<br /> Facebook or Twitter to stay up to date.</p>                           
-                        <div class="social-link">
-                            <span><a href="#"><i class="fa fa-facebook"></i></a></span>
-                            <span><a href="#"><i class="fa fa-twitter"></i></a></span>
-                            <span><a href="#"><i class="fa fa-google-plus"></i></a></span>
-                        </div>
-                    </div>                    
-                </div>
+                
                 <div class="col-sm-12">
-                    <h1>교강사 등록화면</h1>
+                    <h1>학습자 로그인 화면</h1>
                     <div class="time-count">
                         <form style="border:1px solid #ccc">
                             <div class="container">
-                              <h1>Sign Up</h1>
-                              <p>Please fill in this form to create an account.</p>
+                              
                               <hr>
-                          
-                              <label for="name"><b>이름</b></label>
-                              <input type="text" placeholder="이름 등록" name="name" required>
-                          
-                              <label for="psw"><b>비밀번호</b></label>
-                              <input type="password" placeholder="비번 등록" name="password" required>
-                          
-                              <label for="psw-repeat"><b>담당과목</b></label>
-                              <input type="text" placeholder="과목 등록" name="subject" required>
                               
-                              <label>
-                                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                              </label>
-                              
-                              <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+                              <label for="name"><b>아이디</b></label>
+                              <input type="text" placeholder="아이디 등록" id="userid" required>
+                             
+                              <label for="password"><b>비밀번호</b></label>
+                              <input type="password" value="1" id="password" required>
+                            
                           
                               <div class="clearfix">
                                 <button type="button" class="cancelbtn">Cancel</button>
-                                <button type="button" id = "signupbtn" class="signupbtn">Sign Up</button>
+                                <button type="button" id="signin-btn" class="signupbtn">Sign In</button>
                               </div>
                             </div>
                           </form>
@@ -148,27 +128,7 @@
             </div>
         </div>       
     </section>
-    <section id="subscribe">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h2><i class="fa fa-envelope-o"></i> SUBSCRIBE TO OUR NEWSLETTER</h2>
-                            <p>Quis filet mignon proident, laboris venison tri-tip commodo brisket aute ut. Tail salami pork belly, flank ullamco bacon bresaola do beef<br /> laboris venison tri-tip.</p>
-                        </div>
-                        <div class="col-sm-6 newsletter">
-                            <form id="newsletter">
-                                <input class="form-control" type="email" name="email"  value="" placeholder="Enter Your email">
-                                <i class="fa fa-check"></i>
-                            </form>
-                            <p>Don't worry we will not use your email for spam</p>
-                        </div>    
-                    </div>
-                </div>     
-            </div>
-        </div> 
-    </section>
+    
 
     <section id="coming-soon-footer" class="container">
         <div class="row">
@@ -189,6 +149,35 @@
     <script type="text/javascript" src="/resources/js/main.js"></script>
     <script>
         $('#home').click(e => { location.href = '/'})
+        $('#signin-btn').click(e => {
+            e.preventDefault()
+            $.ajax({
+                url: '/students/login',
+                type: 'POST',
+                data: JSON.stringify({
+                    userid: $('#userid').val(),
+                    password: $('#password').val()
+                }),
+                dataType: 'json',
+                contentType: 'application/json',
+                success: d => {
+                    if(d.message === 'SUCCESS'){
+                        sessionStorage.setItem('userid', d.sessionUser.userid)
+                        location.href = '/move/uss/profile'
+                    }else{
+                        alert('로그인 실패, 다시 시도해 주세요')
+                        location.href = '/move/uss/login'
+                    }
+                    
+                    
+                },
+                error: e => {
+                    console.log(`학습자 로그인 실패: ${e.responseText}`)
+                    location.href = '/move/cmm/404'
+                }
+            })
+        })
+        
     </script>
     
 </body>
