--- a/src/main/resources/templates/sym/tea/teacher.html
+++ b/src/main/resources/templates/sym/tea/teacher.html
@@ -526,7 +526,7 @@
 									//stuNum, userid, password, name, ssn, regDate, subject, profileImage
 			$(`#about`).html(`<h5 class="h6 card-title">About</h5>
 									<ul class="list-unstyled mb-0">
-										<li class="mb-1"><span data-feather="home" class="feather-sm mr-1"></span> 교강사번호 : <a href="#">${d.stuNum}</a></li>
+										<li class="mb-1"><span data-feather="home" class="feather-sm mr-1"></span> 교강사번호 : <a href="#">${d.teaNum}</a></li>
 
 										<li class="mb-1"><span data-feather="briefcase" class="feather-sm mr-1"></span> 생년월일 : <a href="#">${d.ssn}</a></li>
 										<li class="mb-1"><span data-feather="map-pin" class="feather-sm mr-1"></span> 주소 : <a href="#">서울</a></li>
