--- a/src/main/resources/templates/sym/mgr/index.html
+++ b/src/main/resources/templates/sym/mgr/index.html
@@ -60,8 +60,8 @@
 
 					<li class="sidebar-item">
 						<a id = "teachers" class="sidebar-link" href="#">
-              <i class="align-middle" data-feather="teacher"></i> <span class="align-middle">교강사목록</span>
-            </a>
+						<i class="align-middle" data-feather="settings"></i> <span class="align-middle">교강사목록</span>
+						</a>
 					</li>
 
 					<li class="sidebar-item">
@@ -639,61 +639,54 @@
 					})
 				})
 			})
-			
-			
-			
 		})
-	</script>
-teaNum, name, email, password, subject, profileImage;
-<script>
-	$('#teaches').click( e => {
-		$.getJSON(`/teachers`, d => {
-			let tr = ``
-			if(d.length != 0){
-				let i = 0
-				for(; i< d.length; i++){
-					tr +=`<tr>`
-						+`<td>${d[i].teaNum}</td>`
-						+`<td>${d[i].userid}</td>`
-						+`<td><a href="#" class="names" id="${d[i].userid}">${d[i].name}</a></td>`
-						+`<td>${d[i].ssn}</td>`
-						+`<td>${d[i].regDate}</td>`
-						+`<td>${d[i].subject}</td>`
-						+`</tr>`
-				}
-			}else{
-				tr = `<td colspan="6"> 조회내용이 없습니다 </td>`
-			}
-			$(`main`).html(`<h2>교강사 목록</h2>
-						<table>
-						<thead>
-						<tr>
-							<th>학번</th>
-							<th>아이디</th>
-							<th>이름</th>
-							<th>생년월일</th>
-							<th>등록일</th>
-							<th>수강과목</th>
-						</tr>
-						</thead>
-						<tbody>
-						${tr}
-						</tbody>
-						</table>
-				`)
-			$('.names').each(function(i){
-				$(this).click(e => {
-					localStorage.setItem("searchId", `${this.id}`)
-					location.href = '/transfer/sym/tea/teacher'
-				})
-			})
-		})
-		
-		
-		
-	})
-</script>
 
+		<!-- teaNum, name, password, subject, profileImage -->
+		$(`#teachers`).click( e => {
+			$.getJSON(`/teachers`, d=>{
+				let tr = ``
+				if(d.length != 0){
+					let i = 0
+					for(;i<d.length;i++){
+						tr +=`<tr>`
+							+`<td>${d[i].teaNum}</td>`
+							+`<td><a href="#" class="names" id="${d[i].teaNum}">${d[i].name}</a></td>`
+							+`<td>${d[i].email}</td>`
+							+`<td>${d[i].subject}</td>`							
+							+`</tr>`
+					}
+				}else{
+					tr = `<td colspan="4"> 조회내용이 없습니다 </td>`
+				}
+				$(`main`).html(`<h2>교강사 목록</h2>
+							<table>
+							<thead>
+							<tr>
+								<th>교강사 번호</th>
+								<th>이름</th>
+								<th>이메일</th>
+								<th>담당과목</th>
+							</tr>
+							</thead>
+							<tbody>
+							${tr}
+							</tbody>
+							</table>
+					`)
+			$(`.names`).each(function(i){
+				$(this).click(e=>{
+					localStorage.setItem(`searchTeacher`, `${this.id}`)
+					location.href = `/transfer/sym/tea/teacher`
+				})
+
+			})
+			// 세선 스토리지 : 로그인 정보를 담는다 (보안)
+			// 로컬 스토리지 : 그 외 정보를 담는다 (보안x)
+
+		})
+
+	})
+	</script>
 	<script>
 		$(function() {
 			var ctx = document.getElementById('chartjs-dashboard-line').getContext("2d");
