--- a/src/main/resources/templates/sym/tea/teacher.html
+++ b/src/main/resources/templates/sym/tea/teacher.html
@@ -541,7 +541,7 @@
 					$.ajax({
 						url:'/teachers',
 						type:'PUT',
-						date:JSON.stringify({
+						data:JSON.stringify({
 							teaNum: d.teaNum, 
 							subject: $(`#changeSubject`).val(),
 							email: $(`#changeEmail`).val()
