--- a/src/main/resources/templates/uss/register.html
+++ b/src/main/resources/templates/uss/register.html
@@ -133,7 +133,7 @@
                               <label for="subject"><b>수강과목</b></label>
                               <input type="text" value="영어" id="subject" required>
                               
-                              <label목
+                              <label>
                                 <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
                               </label>
                               
